# solana-stablecoin-standard

./: .dockerignore  .env.docker.example  .env.example  .gitbook.yaml  .gitignore  .lockstep-dashboard-v2.yml  .lockstep-dashboard.yml  .lockstep-frontend.yml  .lockstep-v2.yml  .lockstep.yml  .railwayignore  .tool-versions  .vercelignore  AGENTS.md  API.md  ARCHITECTURE.md  AUDIT.md  Anchor.toml  CHANGELOG.md  CLAUDE.md  COMPLIANCE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.lock.bak  Cargo.toml  DEPLOY-GUIDE.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_LOG.md  DEVNET_DEPLOYMENT.md  DEVNET_EVIDENCE.md  DOCKER.md  Dockerfile.anchor  FULL_EXTRACTION.txt  IMPLEMENTATION_PLAN.md  ISSUES.md  LICENSE  Makefile  OPERATIONS.md  PRD.md  (+46 more)
.bin/: rbpf-cli  (+6 more)
cli/: .env  Cargo.toml  Dockerfile  README.md  example-config.toml  package-lock.json  package.json  sss2.toml  t1.json  tsconfig.json
cli/src/: ai.ts  args.ts  client.ts  config.js  config.rs  config.ts  display.rs  helpers.ts  index.js  index.ts  interactive.ts  keypair.ts  main.rs  output.ts  pda.rs  program_client.rs  setup-config.ts  tui.rs  tui.ts  utils.rs  utils.ts  validate.ts
cli/src/commands/: accept_authority.rs  allowlist.rs  attest.rs  audit-log.ts  audit.ts  audit_log.rs  blacklist.rs  blacklist.ts  burn.rs  burn.ts  compliance.ts  confidential.rs  config.ts  create.ts  freeze.rs  freeze.ts  holders.rs  holders.ts  index.ts  info.rs  init.rs  init.ts  mint.rs  mint.ts  minter.rs  minters.rs  minters.ts  mod.rs  nominate.rs  operations.ts  pause.rs  pause.ts  registry.ts  roles.rs  roles.ts  seize.rs  seize.ts  set_supply_cap.rs  status.rs  status.ts  (+9 more)
cli/src/lib/: context.ts  output.ts
cli/src/tui/: Dashboard.tsx
cli/src/utils/: config.ts  connection.ts  display.ts  index.ts  keypair.ts  output.ts
cli/sss-token/: package.json
cli/sss-token/src/: config.ts  index.ts
cli/templates/: custom.toml  sss1.toml  sss2.toml
cli/tests/: README.md  cli_tests.rs
cli/tui/: package-lock.json  package.json  tsconfig.json
cli/tui/src/: App.tsx  index.tsx
crates/sss-admin-tui/: Cargo.toml
crates/sss-admin-tui/src/: app.rs  lib.rs  main.rs  runtime.rs
crates/sss-zk-compliance/: Cargo.toml
crates/sss-zk-compliance/src/: lib.rs
modules/sss-oracle/: Cargo.toml
modules/sss-oracle/src/: constants.rs  error.rs  lib.rs  switchboard.rs  types.rs  validation.rs
modules/sss-privacy/: Cargo.toml
modules/sss-privacy/src/: constants.rs  error.rs  lib.rs  types.rs
modules/tui/: Cargo.toml
modules/tui/src/: main.rs
oracle/: Cargo.toml  README.md
oracle/src/: errors.rs  events.rs  lib.rs  state.rs
oracle/src/instructions/: config.rs  mod.rs  price.rs
programs/oracle-module/: Cargo.toml
programs/oracle-module/src/: lib.rs
programs/oracle-pricing/: Cargo.toml
programs/oracle-pricing/src/: error.rs  lib.rs  state.rs  switchboard.rs
programs/oracle_module/: Cargo.toml
programs/oracle_module/src/: lib.rs
programs/sss/: Cargo.toml
programs/sss-3-private/: Cargo.toml
programs/sss-3-private/src/: errors.rs  events.rs  lib.rs  state.rs
programs/sss-compliance/: Cargo.toml
programs/sss-compliance/src/: lib.rs
programs/sss-core/: Cargo.toml  keypair.json
programs/sss-core/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs  utils.rs
programs/sss-hook/: Cargo.toml
programs/sss-hook/src/: error.rs  lib.rs  state.rs
programs/sss-oracle/: Cargo.toml
programs/sss-oracle/src/: error.rs  events.rs  lib.rs  state.rs
programs/sss-private/: Cargo.toml
programs/sss-private/src/: error.rs  lib.rs  state.rs
programs/sss-registry/: Cargo.toml
programs/sss-registry/src/: lib.rs
programs/sss-stablecoin/: Cargo.toml
programs/sss-stablecoin/src/: compliance.rs  constants.rs  error.rs  events.rs  lib.rs  math.rs  state.rs
programs/sss-token/: Cargo.toml  README.md
programs/sss-token/src/: constants.rs  error.rs  errors.rs  events.rs  lib.rs  state.rs
programs/sss-transfer-hook/: Cargo.toml  README.md  keypair.json
programs/sss-transfer-hook/src/: constants.rs  error.rs  lib.rs  state.rs
programs/sss/src/: constants.rs  error.rs  errors.rs  events.rs  lib.rs
programs/sss_core/: Cargo.toml
programs/sss_core/src/: error.rs  events.rs  lib.rs  state.rs
programs/stablecoin/: Cargo.toml  stablecoin-keypair.json
programs/stablecoin-core/: Cargo.toml
programs/stablecoin-core/src/: errors.rs  lib.rs  state.rs  utils.rs
programs/stablecoin/src/: errors.rs  events.rs  lib.rs
programs/transfer-hook/: Cargo.toml  transfer-hook-keypair.json
programs/transfer-hook/src/: error.rs  lib.rs  state.rs
sss-stablecoin/: Cargo.toml
sss-stablecoin/src/: errors.rs  events.rs  lib.rs
sss-stablecoin/src/instructions/: add_to_blacklist.rs  burn.rs  freeze.rs  initialize.rs  mint.rs  mod.rs  pause.rs  remove_from_blacklist.rs  seize.rs  thaw.rs  transfer_authority.rs  unpause.rs  update_minter.rs  update_roles.rs
sss-stablecoin/src/state/: blacklist.rs  config.rs  roles.rs
sss-transfer-hook/: Cargo.toml
sss-transfer-hook/src/: lib.rs
trident-tests/: Cargo.toml  README.md  SUBMISSION_NOTES.md  Trident.toml
trident-tests/fuzz_0/: Cargo.toml  fuzz_0.rs  fuzz_accounts.rs  test_fuzz.rs  types.rs
trident-tests/fuzz_0/src/: lib.rs
trident-tests/fuzz_1/: Cargo.toml  fuzz_1.rs  fuzz_accounts.rs  test_fuzz.rs  types.rs
trident-tests/fuzz_sss_token/: fuzz_accounts.rs  test_fuzz.rs  types.rs
trident-tests/fuzz_tests/: Cargo.toml  fuzz_sss_token.rs
trident-tests/fuzz_tests/fuzz_0/: Cargo.toml  accounts_snapshots.rs  mod.rs  test_fuzz.rs
trident-tests/fuzz_tests/fuzz_1/: mod.rs  test_fuzz.rs  test_instruction_fuzz.rs
trident-tests/src/: arithmetic.rs  invariants.rs  lib.rs  pause_bypass.rs  role_escalation.rs  supply_cap.rs
tui/: .lockstep.yml  AUDIT_REPORT.md  Cargo.toml  README.md  admin_tui.js  package-lock.json  package.json  tsconfig.json
tui/.lockstep/: receipt-2026-02-27T12-29-10.463Z.json  report-2026-02-27T12-29-10.463Z.md
tui/idl/: sss_token.json
tui/src/: app.rs  app.ts  config.ts  dashboard.ts  event-stream.ts  format.ts  index.ts  main.rs  sdk-service.ts  types.ts  ui.ts
(+1615 files in other folders)
