[workspace]
members = [
  "crates/sss-admin-cli",
  "crates/sss-admin-tui",
  "backend/crates/api",
  "backend/crates/db",
  "backend/crates/domain",
  "backend/crates/indexer",
  "backend/crates/stablecoin_client",
  "backend/crates/stablecoin_decoder",
  "modules/sss-common",
  "programs/stablecoin",
  "programs/transfer-hook",
  "tests/litesvm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/pratikbuilds/solana-stablecoin-standard"

[workspace.dependencies]
async-trait = "0.1.88"
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
anyhow = "1.0.98"
axum = { version = "0.8.1", features = ["json", "macros"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
carbon-core = "0.9.1"
carbon-rpc-block-crawler-datasource = "0.9.1"
carbon-rpc-transaction-crawler-datasource = "0.9.1"
carbon-rpc-block-subscribe-datasource = "0.9.1"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.3.1"
litesvm = "0.6.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "2.2.4"
solana-sdk = "2.2.0"
solana-transaction-status = "2.2.4"
solana-transaction-status-client-types = "2.2.4"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json", "migrate"] }
spl-associated-token-account = "6.0.0"
spl-tlv-account-resolution = "0.10.0"
spl-token-2022 = "8.0.1"
spl-transfer-hook-interface = "0.10.0"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
sha2 = "0.10.8"

[profile.release]
overflow-checks = true

[patch.crates-io]
# Anchor 0.32 needs AccountInfo::resize; crates.io 2.2.1 lacks it; vendor has backport
solana-account-info = { path = "vendor/solana-account-info" }
