[package]
name = "sss-token"
version = "0.1.0"
edition = "2021"
description = "CLI for the SSS Solana Stablecoin Standard program"

[[bin]]
name = "sss-token"
path = "src/main.rs"

[dependencies]
anchor-client = { version = "0.32.1", features = ["async"] }
anchor-lang = "0.32.1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
solana-sdk = "2"
solana-client = "2"
spl-token-2022 = "8"
spl-associated-token-account = "7"
base64 = "0.22"
solana-system-interface = "3.1.0"
solana-transaction-status = "2.3.13"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
solana-sdk = "2"
solana-client = "2"
spl-associated-token-account = "7"
spl-token-2022 = "8"
