[package]
name = "sss-stablecoin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-token-2022 = "3.0.1"
spl-transfer-hook-interface = "0.5.0"
spl-token-metadata-interface = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
