[package]
name = "sss-transfer-hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.5.0"
spl-tlv-account-resolution = "0.5.1"
spl-token-2022 = "3.0.1"
thiserror = "1.0"
