[package]
name = "fuzz_tests"
version = "0.1.0"
edition = "2021"
description = "Trident fuzz tests for the Solana Stablecoin Standard (sss-core)"

[dependencies]
borsh = "1.5.3"
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions"] }

[dependencies.trident-fuzz]
version = "0.12.0"
features = ["all"]

[dependencies.sss-core]
path = "../programs/sss-core"
features = ["no-entrypoint"]

[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[[bin]]
name = "fuzz_1"
path = "fuzz_1/test_fuzz.rs"
