[workspace]

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Trident fuzz harness for Solana Stablecoin Standard"
edition = "2021"
license = "Apache-2.0"

[dependencies]
borsh = "1.5.3"
proptest = "1.6.0"
rand = "0.8"

[dependencies.trident-fuzz]
version = "0.12.0"
features = ["token"]

[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"

[[bin]]
name = "fuzz_1"
path = "fuzz_1/test_fuzz.rs"
