[package]
name = "sss-zk-compliance"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5"
curve25519-dalek = "4.1.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
solana-curve25519 = "2.3.13"
thiserror = "1"

[[bin]]
name = "sss-zk-prove"
path = "src/bin/sss_zk_prove.rs"
