[package]
name = "sss-oracle"
version = "0.1.0"
description = "SSS Oracle Module - Price feeds for non-USD stablecoin pegs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
solana-security-txt = "1.1.1"
