[package]
name = "sss-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
solana-client = "2.2"
solana-sdk = "2.2"
anchor-client = "0.31.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
