[package]
name = "oracle-module"
version = "0.1.0"
description = "Solana Stablecoin Standard — Oracle integration module for non-USD pegs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_module"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
