[package]
name = "sss-core"
version = "0.1.0"
description = "Solana Stablecoin Standard — core program (SSS-1 + SSS-2)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
sss-math = { path = "../../modules/sss-math", features = ["no-entrypoint"] }
