[package]
name = "sss-hook"
version = "0.1.0"
edition = "2021"
description = "Transfer hook program for SSS-2 compliance (blacklist enforcement)"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true, features = ["interface-instructions"] }
anchor-spl = { workspace = true, features = ["token_2022", "token_2022_extensions"] }
spl-tlv-account-resolution = "0.8.1"
spl-transfer-hook-interface = "0.8.2"
spl-discriminator = "0.3"
sss-events = { path = "../../modules/sss-events" }
sss-core = { path = "../sss-core", features = ["cpi"] }

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "sss-events/idl-build"]
