[package]
name = "sss-oracle-program"
version = "0.1.0"
edition = "2021"
description = "Oracle price feed program for the Solana Stablecoin Standard"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_oracle_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
