[package]
name = "sss-token"
version = "0.1.0"
description = "Solana Stablecoin Standard — core program (SSS-1 & SSS-2)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
trident-fuzz = []
default = ["init-if-needed"]
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-heap = []
anchor-debug = []

[dependencies]
anchor-lang                 = { workspace = true }
anchor-spl                  = { workspace = true }
# anchor-spl                  = { workspace = true, features = ["token_2022", "token_2022_extensions"] }
# spl-tlv-account-resolution  = { workspace = true }
# spl-transfer-hook-interface = { workspace = true }
# spl-type-length-value       = { workspace = true }
# spl-pod                     = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature)'] }