[package]
name = "sss-token"
version = "0.1.0"
description = "Solana Stablecoin Standard - Core Token Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token_2022", "token_2022_extensions"] }
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5"
spl-transfer-hook-interface = "0.8"
spl-pod = "0.5"
spl-type-length-value = "0.6"
solana-security-txt = "1.1"
