[package]
name = "sss-transfer-hook"
version = "0.1.0"
edition = "2021"
description = "Solana Stablecoin Standard transfer hook program"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-discriminator = { workspace = true }
spl-pod = { workspace = true }
spl-type-length-value = { workspace = true }
solana-security-txt = { workspace = true }
