[package]
name = "sss-transfer-hook"
version = "1.0.3"
description = "Solana Stablecoin Standard - Transfer Hook for blacklist enforcement on Token-2022 transfers"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/solanabr/solana-stablecoin-standard"
homepage = "https://stablecoinstandard.dev"
keywords = ["solana", "stablecoin", "transfer-hook", "token-2022", "spl"]
categories = ["cryptography::cryptocurrencies"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
solana-security-txt = "1.1.1"
spl-transfer-hook-interface = "0.9"
spl-tlv-account-resolution = "0.9"
spl-token-2022 = { version = "6", features = ["no-entrypoint"] }
