[package]
name = "sss"
version = "0.1.0"
description = "Solana Stablecoin Standard program"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = []

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["token_2022", "token"] }
solana-program = "1.18.15"
# Strict Pins for 1.75.0 Compatibility
borsh = "=1.5.1"
indexmap = "=2.2.6"
proc-macro-crate = "=1.3.1"

