[package]
name = "sss-core"
version = "0.1.0"
description = "Solana Stablecoin Standard Base Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }

# Идеальная "золотая середина": 
# Подходит для Anchor 0.32.1, но не ломает компилятор новым Rust 2024.
blake3 = "=1.7.0"