[package]
name = "sss-core"
version = "0.1.0"
description = "Solana Stablecoin Standard Base Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# Используем стабильный Anchor 0.30.1
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }

# ЖЕСТКО фиксируем версию ядра Solana на 1.18.17. 
# Это спасет нас от ошибки ZK Token SDK (PedersenCommitment).
solana-program = "=1.18.17"
solana-zk-token-sdk = "=1.18.17" 

# --- ФИКСЫ ОТ RUST 2024 (Оставляем, они нужны) ---
blake3 = "=1.7.0"
base64ct = "=1.6.0"

# Метаданные
spl-token-metadata-interface = "0.3.3"
