[package]
name = "solana-stablecoin"
version = "0.1.0"
description = "Solana Stablecoin Standard (SSS) - On-chain Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_stablecoin"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
spl-token-metadata-interface = { workspace = true }
