[package]
name = "sss-transfer-hook"
version = "0.1.0"
description = "Transfer Hook Program for SSS-2 Blacklist Enforcement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
spl-token-2022 = { workspace = true }
spl-transfer-hook-interface = { workspace = true }
spl-tlv-account-resolution = { workspace = true }
solana-stablecoin = { path = "../stablecoin", features = ["cpi"] }
